fixed spacing issues on todo page

--- a/app/assets/stylesheets/api/projects.scss
+++ b/app/assets/stylesheets/api/projects.scss
@@ -157,7 +157,7 @@ $offblue: #DEE5F5;
 .project-inner-div {
   padding: 10px;
   margin: 10px;
-  min-width: 825px;
+  min-width: 600px;
   border-radius: 10px;
   background: ghostwhite;
 }
