--- a/app/assets/stylesheets/api/todo_lists.scss
+++ b/app/assets/stylesheets/api/todo_lists.scss
@@ -12,3 +12,8 @@
   width: 525px;
   padding: 0;
 }
+
+.todoitems-list {
+  padding: 0 10px;
+  list-style: none;
+}
