--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -177,6 +177,7 @@ input[type="checkbox"]:checked + label:after {
   font-family: 'Raleway', sans-serif;
   font-size: 18px;
   float: left;
+  width: 300px;
   height: 130px;
   background-color: white;
   margin: 10px;
